--- a/project.config.json
+++ b/project.config.json
@@ -1,8 +1,8 @@
 {
-  "miniprogramRoot": "./dist",
+  "miniprogramRoot": "./dist/weapp",
   "projectname": "funkey",
   "description": "this is a cross-platform project and for fun",
-  "appid": "touristappid",
+  "appid": "wxde4d53888f44c399",
   "setting": {
     "urlCheck": true,
     "es6": false,
