--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "css": "less"
   },
   "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:quickapp": "taro build --type quickapp",
+    "build:weapp": "npx taro build --type weapp",
+    "build:swan": "npx taro build --type swan",
+    "build:alipay": "npx taro build --type alipay",
+    "build:tt": "npx taro build --type tt",
+    "build:h5": "npx taro build --type h5",
+    "build:rn": "npx taro build --type rn",
+    "build:qq": "npx taro build --type qq",
+    "build:jd": "npx taro build --type jd",
+    "build:quickapp": "npx taro build --type quickapp",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@tarojs/cli": "^3.4.0",
     "@tarojs/mini-runner": "3.2.13",
     "@tarojs/webpack-runner": "3.2.13",
     "@types/react": "^17.0.2",
